--- a/unidad3.html
+++ b/unidad3.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tu Página</title>
   <link rel="stylesheet" href="main.css">
-<h1>Lenguajes de programacion 2023B</h1>
+<h1>Unidad 3</h1>
 <p>Hola, me llamo Juan Camilo Suarez Moreno, tengo 20 años y estoy cursando septimo semestre de ingenieria de sistemas en la universidad Santiago de Cali.</p>
 <p>Lenguajes de programacion dirigida por el profesor Diego Fernado Loaiza, consiste en diseñar, implementar y resolver distintas circunstancias a traves de codigos que pueden llevar cualquier lenguaje de programacion para llegar a su solucion pertinente. Todo esto nos permite organizar algoritmos y procesos, donde podemos su comportamiento físico, lógico y su comunicación con el usuario.</p>
 <p>Conclusiones de la clase:</p>
