--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1>Lenguajes de programacion 2023B</h1>
 <p>Hola, me llamo Juan Camilo Suarez Moreno, tengo 20 años y estoy cursando septimo semestre de ingenieria de sistemas en la universidad Santiago de Cali.</p>
 <p>Lenguajes de programacion dirigida por el profesor Diego Fernado Loaiza, consiste en diseñar, implementar y resolver distintas circunstancias a traves de codigos que pueden llevar cualquier lenguaje de programacion para llegar a su solucion pertinente. Todo esto nos permite organizar algoritmos y procesos, donde podemos su comportamiento físico, lógico y su comunicación con el usuario.</p>
-<p>Conclusiones de la clase:</p>
+<p>Conclusiones de la clase: Siento que entre todos nos hemos ayudado para entender y comprender mejores los temas, al final el ideal es para tenerlo en cuneta y aplicarlo en una situacion laboral en un futuro. Nos hemos enriquecido de buena manera gracias </p>
 <p></p>
 <p>En los siguientes botones estaran organizado por cada unidad que hemos visto durante el semestre en esta clase, donde en cada unidad va haber los temas que hemos visto:</p>
 <div class="Botones">
