--- a/unidad2.html
+++ b/unidad2.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tu Página</title>
+  <title>Unidad 2</title>
   <link rel="stylesheet" href="main.css">
 <h1>Lenguajes de programacion 2023B</h1>
 <p>Hola, me llamo Juan Camilo Suarez Moreno, tengo 20 años y estoy cursando septimo semestre de ingenieria de sistemas en la universidad Santiago de Cali.</p>
