--- a/unidad1.html
+++ b/unidad1.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
-<html>
-<body>
-    <html lang="es">
+<html lang="es"></html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tu Página</title>
+  <title>Unidad 1</title>
   <link rel="stylesheet" href="main.css">
-<h1>Lenguajes de programacion 2023B</h1>
-<p>Hola, me llamo Juan Camilo Suarez Moreno, tengo 20 años y estoy cursando septimo semestre de ingenieria de sistemas en la universidad Santiago de Cali.</p>
-<p>Lenguajes de programacion dirigida por el profesor Diego Fernado Loaiza, consiste en diseñar, implementar y resolver distintas circunstancias a traves de codigos que pueden llevar cualquier lenguaje de programacion para llegar a su solucion pertinente. Todo esto nos permite organizar algoritmos y procesos, donde podemos su comportamiento físico, lógico y su comunicación con el usuario.</p>
-<p>Conclusiones de la clase:</p>
-<p></p>
-<p>En los siguientes botones estaran organizado por cada unidad que hemos visto durante el semestre en esta clase, donde en cada unidad va haber los temas que hemos visto:</p>
+</head>
+<body>
+<h1>Unidad 1</h1>
+<p>En esta unidad, al principio del semestre empezamos viendo o recordando algunas funciones basica de Python como funciones de primera orden y al orden, programacion funcional, funciones Map y Reduce. Por ultimo vimos los patrones de diseño Singelton y Strategy.</p>
+<p>A continuacion mostraré algunos codigos realizados en clase:</p>
+<p> Funcion Reduce</p>    
+<img src="1.png" class="img">   
+<p> Funcion Map Filtro</p>
+<img src="2.png" class="img">
+<p> Ejemplo aplicando funciones Map, reduce, euler</p>
+<img src="3.png" class="img"></p>
+<img src="4.png" class="img">
+
+<p>En los siguientes botones puedes seguir explorando por las unidades:</p>
 <div class="Botones">
-    <a href="unidad1.html"><button>Unidad 1</button></a>
+    <a href="index.html"><button>Inicio</button></a>
     <a href="unidad2.html"><button>Unidad 2</button></a>
     <a href="unidad3.html"><button>Unidad 3</button></a>
-</div>
+
 </body>
 </html>
