--- a/unidad2.html
+++ b/unidad2.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
-<html>
-<body>
-    <html lang="es">
+<html lang="es"></html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Unidad 2</title>
   <link rel="stylesheet" href="main.css">
-<h1>Lenguajes de programacion 2023B</h1>
-<p>Hola, me llamo Juan Camilo Suarez Moreno, tengo 20 años y estoy cursando septimo semestre de ingenieria de sistemas en la universidad Santiago de Cali.</p>
-<p>Lenguajes de programacion dirigida por el profesor Diego Fernado Loaiza, consiste en diseñar, implementar y resolver distintas circunstancias a traves de codigos que pueden llevar cualquier lenguaje de programacion para llegar a su solucion pertinente. Todo esto nos permite organizar algoritmos y procesos, donde podemos su comportamiento físico, lógico y su comunicación con el usuario.</p>
-<p>Conclusiones de la clase:</p>
-<p></p>
-<p>En los siguientes botones estaran organizado por cada unidad que hemos visto durante el semestre en esta clase, donde en cada unidad va haber los temas que hemos visto:</p>
+</head>
+<body>
+<h1>Unidad 2</h1>
+<p>En esta segunda unidad, nos enfocamos en aprender todo sobre la programacion orientada a objectos, donde vimos los siquietes conceptos:</p>
+<p>Abstraccion: Crea clase con metodos donde se encuentran atributos</p>
+<p>Herencia: sirve para generalizar una clase, es deir los atributos comunes entre dos o mas clases</p>
+<p>Polimorfismo: capacidad de las clases, funciones y operadores adopten distintos comportamientos, tambien se puede sobrecargar para mostrar datos</p>
+<p>Encapsulamiento: Dentro de clase asociadas obtenemos atributos tanto publicos como privados.</p>
+<p>Ade mas de ver nuevos patrones de diseño que son:</p>
+<p>Oserver: Permite a un objeto notificar a otros objetos sobre cambios en su estado.</p>
+<p>Adapter: Permite colaborar a objetos incompatibles donde actúa como envoltorio entre dos objetos.</p>
+<p>Ejemplo POO</p>
+<img src="5.png" class="img">
+<p>Ejemplo Observer</p>
+<img src="6.png" class="img">
+<p>Ejemplo adapter</p>
+<img src="7.png" class="img">
+<p>Sigue explorando</p>
 <div class="Botones">
-    <a href="unidad1.html"><button>Unidad 1</button></a>
+    <a href="index.html"><button>Inicio</button></a>
     <a href="unidad2.html"><button>Unidad 2</button></a>
     <a href="unidad3.html"><button>Unidad 3</button></a>
-</div>
+
 </body>
 </html>
