--- a/unidad3.html
+++ b/unidad3.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
-<html>
-<body>
-    <html lang="es">
+<html lang="es"></html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tu Página</title>
+  <title>Unidad 3</title>
   <link rel="stylesheet" href="main.css">
+</head>
+<body>
 <h1>Unidad 3</h1>
-<p>Hola, me llamo Juan Camilo Suarez Moreno, tengo 20 años y estoy cursando septimo semestre de ingenieria de sistemas en la universidad Santiago de Cali.</p>
-<p>Lenguajes de programacion dirigida por el profesor Diego Fernado Loaiza, consiste en diseñar, implementar y resolver distintas circunstancias a traves de codigos que pueden llevar cualquier lenguaje de programacion para llegar a su solucion pertinente. Todo esto nos permite organizar algoritmos y procesos, donde podemos su comportamiento físico, lógico y su comunicación con el usuario.</p>
-<p>Conclusiones de la clase:</p>
+<p>En esta ultima unidad, empezamos a ver en Java el concepto de Hilos y concurrency:</p>
+<p>Hilos: Ejecuta funciones para que continúe con la ejecución de la función main o la función desde donde se llamó al hilo.</p>
+<p>Concurrency: Permite planificar tareas para que se ejecuten en paralelo. </p>
+<p>Ejemplo Simple Hilos</p>
+<img src="8.png" class="img">
 <p></p>
-<p>En los siguientes botones estaran organizado por cada unidad que hemos visto durante el semestre en esta clase, donde en cada unidad va haber los temas que hemos visto:</p>
+<img src="9.png" class="img">
+<p>Ejemplo Concurrency</p>
+<img src="10.png" class="img">
+
+<p>Fin :D</p>
 <div class="Botones">
-    <a href="unidad1.html"><button>Unidad 1</button></a>
+    <a href="index.html"><button>Inicio</button></a>
     <a href="unidad2.html"><button>Unidad 2</button></a>
     <a href="unidad3.html"><button>Unidad 3</button></a>
-</div>
+
 </body>
 </html>
