Primer final con bugs

--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang="es"></html>
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tu Página</title>
+  <title>Lenguajes de programacion 2023B</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-<h1>Lenguajes de programacion 2023B</h1>
-<p>Hola, me llamo Juan Camilo Suarez Moreno, tengo 20 años y estoy cursando séptimo semestre de ingeniería de sistemas en la universidad Santiago de Cali.</p>
-<p>Lenguajes de programación dirigida por el profesor Diego Fernando Loaiza, consiste en diseñar, implementar y resolver distintas circunstancias a través de códigos que pueden llevar cualquier lenguaje de programación para llegar a su solución pertinente. Todo esto nos permite organizar algoritmos y procesos, donde podemos su comportamiento físico, lógico y su comunicación con el usuario. </p>
-<p>Conclusiones de la clase: La clase aborda varios temas relacionados con Python y Java vistos durante todo el semestre. Siento que entre todos nos hemos ayudado para entender y comprender mejores los temas donde esto nos permite estimular la creatividad, el pensamiento lógico y/o estructurado. Por último, pero no menos importante, agradecer al profesor por su ayuda y comprensión, por tomarse el tiempo para explicar cada paso guiándonos para no perdernos en la mitad del camino. </p>
-<p>En los siguientes botones estarán organizado por cada unidad que hemos visto durante el semestre en esta clase, donde en cada unidad se encontrará los temas que hemos visto:</p>
-<div class="Botones">
-    <a href="unidad1.html"><button>Unidad 1</button></a>
-    <a href="unidad2.html"><button>Unidad 2</button></a>
-    <a href="unidad3.html"><button>Unidad 3</button></a>
-
+  <h1>Lenguajes de programacion 2023B</h1>
+  <p>Hola, me llamo Juan Camilo Suarez Moreno, tengo 20 años y estoy cursando séptimo semestre de ingeniería de sistemas en la universidad Santiago de Cali.</p>
+  <p>Lenguajes de programación dirigida por el profesor Diego Fernando Loaiza, consiste en diseñar, implementar y resolver distintas circunstancias a través de códigos que pueden llevar cualquier lenguaje de programación para llegar a su solución pertinente. Todo esto nos permite organizar algoritmos y procesos, donde podemos su comportamiento físico, lógico y su comunicación con el usuario. </p>
+  <p>Conclusiones de la clase: La clase aborda varios temas relacionados con Python y Java vistos durante todo el semestre. Siento que entre todos nos hemos ayudado para entender y comprender mejores los temas donde esto nos permite estimular la creatividad, el pensamiento lógico y/o estructurado. Por último, pero no menos importante, agradecer al profesor por su ayuda y comprensión, por tomarse el tiempo para explicar cada paso guiándonos para no perdernos en la mitad del camino. </p>
+  <p>En los siguientes botones estarán organizado por cada unidad que hemos visto durante el semestre en esta clase, donde en cada unidad se encontrará los temas que hemos visto:</p>
+  <div class="Botones">
+      <a href="unidad1.html"><button>Unidad 1</button></a>
+      <a href="unidad2.html"><button>Unidad 2</button></a>
+      <a href="unidad3.html"><button>Unidad 3</button></a>
+  </div>
 </body>
 </html>
