--- a/unidad1.html
+++ b/unidad1.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="es"></html>
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Unidad 1</title>
+  <title>Lenguajes de programacion 2023B</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -23,6 +23,6 @@
     <a href="index.html"><button>Inicio</button></a>
     <a href="unidad2.html"><button>Unidad 2</button></a>
     <a href="unidad3.html"><button>Unidad 3</button></a>
-
+ </div>
 </body>
 </html>
