--- a/unidad1.html
+++ b/unidad1.html
@@ -8,16 +8,17 @@
 </head>
 <body>
 <h1>Unidad 1</h1>
-<p>En esta unidad, al principio del semestre empezamos viendo o recordando algunas funciones basica de Python como funciones de primera orden y al orden, programacion funcional, funciones Map y Reduce. Por ultimo vimos los patrones de diseño Singelton y Strategy.</p>
+<p>En esta unidad, al principio del semestre empezamos viendo o recordando algunas funciones basicas de Python como funciones de primera orden y alto orden, programacion funcional, funciones Map y Reduce. Por ultimo vimos los patrones de diseño Singelton y Strategy.</p>
 <p>A continuacion mostraré algunos codigos realizados en clase:</p>
-<p> Funcion Reduce</p>    
+<p>Funcion Reduce:</p>    
 <img src="1.png" class="img">   
-<p> Funcion Map Filtro</p>
+<p> Funcion Map Filtro:</p>
 <img src="2.png" class="img">
-<p> Ejemplo aplicando funciones Map, reduce, euler</p>
+<p>Ejemplo aplicando funciones Map, reduce, euler:</p>
 <img src="3.png" class="img"></p>
 <img src="4.png" class="img">
-
+<p>Ejemplo Singelton:</p>
+<img src="11.png" class="img"></p>
 <p>En los siguientes botones puedes seguir explorando por las unidades:</p>
 <div class="Botones">
     <a href="index.html"><button>Inicio</button></a>
